# HabitTracker

./: .env.example  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schema.yml
config/: settings.py  urls.py
habits/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
habits/migrations/: 0001_initial.py
habits/services/: period.py  streak.py
habits/static/habits/css/: styles.css
habits/static/habits/js/: api.js  app.js  state.js
habits/templates/habits/: base.html  index.html  login.html
habits/tests/: factories.py  test_api.py  test_period.py  test_streak.py
habits/views/: __init__.py  analytics.py  auth.py  habits.py
